# fbpanel

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COPYING  CREDITS  README.md  about.md  config.h.in  docs.md
.config/: tar.py
.github/workflows/: cmake.yml
data/: CMakeLists.txt
data/config/: Makefile  default.in  pager.in
data/man/: Makefile  fbpanel.1.in
exec/: CMakeLists.txt  Makefile  make_profile.in  xlogout
panel/: CMakeLists.txt  Makefile  bg.h  dbg.h  ev.h  gconf.c  gconf_panel.c  gtkbar.c  gtkbar.h  gtkbgbox.c  gtkbgbox.h  misc.c  misc.h  panel.c  panel.h  plugin.c  xconf.h
plugins/: CMakeLists.txt
plugins/battery/: Makefile  battery.c  power_supply.c  power_supply.h
plugins/chart/: Makefile  chart.c  chart.h
plugins/cpu/: Makefile
plugins/dclock/: Makefile  dclock.c
plugins/deskno/: Makefile  deskno.c
plugins/deskno2/: Makefile
plugins/genmon/: Makefile  genmon.c
plugins/icons/: Makefile  icons.c
plugins/image/: Makefile  image.c
plugins/launchbar/: Makefile  launchbar.c
plugins/mem/: Makefile
plugins/mem2/: Makefile
plugins/menu/: Makefile  system_menu.c
plugins/meter/: Makefile  meter.c
plugins/net/: Makefile
plugins/pager/: Makefile  pager.c
plugins/separator/: Makefile  separator.c
plugins/space/: Makefile  space.c
plugins/systray/: Makefile
plugins/taskbar/: Makefile  taskbar.c
plugins/tclock/: Makefile  tclock.c
plugins/tray/: eggmarshalers.c.inc  eggmarshalers.h  eggtraymanager.c  eggtraymanager.h  fixedtip.h  main.c
plugins/volume/: Makefile
plugins/wincmd/: Makefile  wincmd.c
po/: CMakeLists.txt  fr_FR.UTF-8.po  it_IT.UTF-8.po  ru_RU.UTF-8.po
www/: CMakeLists.txt  index.thtml  my.css  top
www/shots/: mk_gallery
